# MatrixCUDA

./: README.md  build.gradle.kts  settings.gradle.kts
src/main/cpp/: CMakeLists.txt  com_example_bagrorg_JniMatrixOperations.h  matrix.cpp
src/main/cpp/kernelCUDA/: kernel.cu  kernel.cuh
src/main/kotlin/com/example/bagrorg/: GPUMatrixOperations.kt  JniMatrixOperations.kt  Main.kt  MatrixOperations.kt
